[gd_scene load_steps=9 format=4 uid="uid://dhl8x63tys2a6"]

[ext_resource type="Script" path="res://Scripts/world_manager.gd" id="1_pe62w"]
[ext_resource type="PackedScene" uid="uid://dcm77dbaqxc3q" path="res://Scenes/levels/level_transitions/level_one_start.tscn" id="4_yx7o2"]
[ext_resource type="Texture2D" uid="uid://cs4rtodc2ukrj" path="res://Assets/Cute_Fantasy_Free/Outdoor decoration/House.png" id="5_qms8i"]
[ext_resource type="PackedScene" uid="uid://bc7wyx8xvx0ks" path="res://Scenes/player.tscn" id="6_rckpy"]
[ext_resource type="PackedScene" uid="uid://bgmywrevibtrl" path="res://markIncompleteScenes/mugger_spawn.tscn" id="7_8fpje"]
[ext_resource type="PackedScene" uid="uid://cd3sap8kut7hg" path="res://Scenes/SpriteSheet/gandalf_sheet.tscn" id="8_lxk5y"]
[ext_resource type="PackedScene" uid="uid://cwof5mp8tj5cg" path="res://Scenes/platform.tscn" id="9_t1584"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_xpmxf"]
a = Vector2(-25.125, -8)
b = Vector2(22.875, -18)

[node name="world 1" type="Node2D"]
script = ExtResource("1_pe62w")

[node name="background" parent="." instance=ExtResource("8_lxk5y")]

[node name="prosperity_toggle" parent="." instance=ExtResource("8_lxk5y")]
rotation = 0.000372129
tile_map_data = PackedByteArray("AAC2//z/AAAbAAoAAAC3//z/AAAdAAoAAAC2//j/AAAaAAgAAAC3//f/AAAcAAYAAAC4//b/AAAcAAYAAAC5//X/AAAcAAYAAAC6//T/AAAcAAYAAAC7//P/AAAcAAYAAAC8//L/AAAcAAYAAAC9//H/AAAdAAUAAAC2//v/AAAaAAwAAAC3//v/AAAeAAcAAAC4//v/AAAfAAcAAAC5//v/AAAgAAcAAAC6//v/AAAdAAcAAAC7//v/AAAeAAcAAAC8//v/AAAfAAcAAAC9//v/AAAgAAcAAAC+//v/AAAdAAcAAAC///v/AAAeAAcAAADA//v/AAAfAAcAAADB//v/AAAgAAcAAADC//v/AAAdAAcAAADD//v/AAAeAAcAAADE//v/AAAfAAcAAADF//v/AAAgAAcAAADC//r/AAAdAAcAAADD//r/AAAeAAcAAADE//r/AAAfAAcAAADF//r/AAAgAAcAAAC+//r/AAAdAAcAAAC///r/AAAeAAcAAADA//r/AAAfAAcAAADB//r/AAAgAAcAAAC6//r/AAAdAAcAAAC7//r/AAAeAAcAAAC8//r/AAAfAAcAAAC9//r/AAAgAAcAAAC2//r/AAAaAAwAAAC3//r/AAAeAAYAAAC4//r/AAAfAAYAAAC5//r/AAAeAAcAAADG//v/AAAdAAcAAADH//v/AAAeAAcAAADI//v/AAAfAAcAAADJ//v/AAAgAAcAAADG//r/AAAdAAcAAADH//r/AAAeAAcAAADI//r/AAAfAAcAAADJ//r/AAAgAAcAAAC6//j/AAAcAAwAAAC6//n/AAAcAA0AAAC7//j/AAAdAAwAAAC7//n/AAAdAA0AAADI//j/AAAcAAwAAADI//n/AAAcAA0AAADJ//j/AAAdAAwAAADJ//n/AAAdAA0AAAC+//D/AAAeAAQAAAC//+//AAAeAAQAAADA/+7/AAAeAAQAAADB/+3/AAAeAAQAAADC/+3/AAAfAAQAAADD/+7/AAAgAAUAAADE/+//AAAhAAYAAADF//D/AAAiAAcAAADG//H/AAAhAAYAAADH//L/AAAfAAQAAADI//P/AAAgAAUAAADJ//T/AAAhAAYAAADK//X/AAAfAAQAAADL//b/AAAgAAUAAADN//j/AAAjAAgAAADO//n/AAAkAAkAAADN//n/AAAjAAkAAAC4//j/AAAfAAYAAAC4//n/AAAfAAcAAAC4//f/AAAcAAcAAAC3//j/AAAdAAYAAAC2//n/AAAaAAkAAAC5//b/AAAdAAYAAAC6//X/AAAdAAYAAAC7//T/AAAdAAYAAAC8//P/AAAdAAYAAAC9//L/AAAdAAYAAAC+//H/AAAdAAYAAAC///D/AAAdAAYAAADA/+//AAAdAAYAAADB/+7/AAAdAAYAAADB/+//AAAcAAwAAADB//D/AAAcAA0AAADC/+//AAAdAAwAAADC//D/AAAdAA0AAADB//H/AAAfAAcAAADB//L/AAAeAAYAAADC//H/AAAfAAYAAADC//L/AAAfAAYAAAC///H/AAAeAAYAAAC///L/AAAfAAYAAADA//H/AAAeAAcAAADA//L/AAAfAAcAAADA//D/AAAeAAYAAAC+//L/AAAeAAYAAAC+//P/AAAeAAYAAAC///P/AAAfAAcAAAC9//P/AAAeAAYAAAC9//T/AAAeAAYAAAC+//T/AAAeAAYAAAC8//X/AAAfAAYAAAC8//b/AAAfAAcAAAC9//X/AAAeAAYAAAC9//b/AAAeAAYAAAC8//T/AAAeAAYAAAC7//b/AAAeAAYAAAC7//f/AAAfAAcAAAC8//f/AAAfAAcAAAC7//X/AAAeAAYAAAC6//b/AAAeAAYAAAC6//f/AAAeAAYAAADG//j/AAAeAAYAAADG//n/AAAeAAcAAADH//j/AAAfAAYAAADH//n/AAAfAAcAAADE//j/AAAeAAYAAADE//n/AAAeAAcAAADF//j/AAAfAAYAAADF//n/AAAfAAcAAADC//j/AAAeAAYAAADC//n/AAAeAAcAAADD//j/AAAfAAYAAADD//n/AAAfAAcAAADA//j/AAAeAAYAAADA//n/AAAeAAcAAADB//j/AAAfAAYAAADB//n/AAAfAAcAAAC+//j/AAAeAAYAAAC+//n/AAAeAAcAAAC///j/AAAfAAYAAAC///n/AAAfAAcAAAC8//j/AAAeAAYAAAC8//n/AAAeAAcAAAC9//j/AAAfAAYAAAC9//n/AAAfAAcAAAC9//f/AAAeAAcAAAC+//b/AAAfAAYAAAC+//f/AAAfAAcAAAC///b/AAAeAAYAAAC///f/AAAeAAcAAADA//b/AAAfAAYAAADA//f/AAAfAAcAAADB//b/AAAeAAYAAADB//f/AAAeAAcAAADC//b/AAAfAAYAAADC//f/AAAfAAcAAADD//b/AAAeAAYAAADD//f/AAAeAAcAAADE//b/AAAfAAYAAADE//f/AAAfAAcAAADF//b/AAAeAAYAAADF//f/AAAeAAcAAADG//b/AAAfAAYAAADG//f/AAAfAAcAAADH//b/AAAeAAYAAADH//f/AAAeAAcAAADI//b/AAAfAAYAAADI//f/AAAfAAcAAADJ//b/AAAeAAYAAADJ//f/AAAeAAcAAADK//b/AAAfAAUAAADK//f/AAAeAAYAAADH//T/AAAeAAYAAADH//X/AAAeAAcAAADI//T/AAAfAAUAAADI//X/AAAfAAcAAADF//T/AAAeAAYAAADF//X/AAAeAAcAAADG//T/AAAfAAYAAADG//X/AAAfAAcAAADD//T/AAAeAAYAAADD//X/AAAeAAcAAADE//T/AAAfAAYAAADE//X/AAAfAAcAAADB//T/AAAeAAYAAADB//X/AAAeAAcAAADC//T/AAAfAAYAAADC//X/AAAfAAcAAAC///T/AAAfAAYAAAC///X/AAAeAAYAAADA//T/AAAfAAYAAADA//X/AAAfAAYAAAC+//X/AAAfAAYAAADF//L/AAAeAAYAAADF//P/AAAeAAcAAADG//L/AAAfAAUAAADG//P/AAAfAAcAAADD//L/AAAeAAYAAADD//P/AAAeAAcAAADE//L/AAAfAAYAAADE//P/AAAfAAcAAADB//P/AAAeAAcAAADC//P/AAAfAAcAAADD//D/AAAeAAYAAADD//H/AAAeAAcAAADE//D/AAAfAAUAAADE//H/AAAfAAcAAADA//P/AAAeAAYAAADC/+7/AAAfAAUAAADD/+//AAAfAAUAAADF//H/AAAfAAUAAADH//P/AAAfAAUAAADJ//X/AAAfAAUAAADL//f/AAAhAAcAAADN//r/AAAjAAoAAADN//v/AAAjAAsAAADN//z/AAAiAAoAAADN//3/AAAaAA0AABDN//7/AAAaAA4AABDN////AAAaAA8AABDM//7/AAAbAA4AABDM////AAAbAA8AABDM//n/AAAfAAcAAADM//r/AAAfAAcAAADM//v/AAAfAAcAAADM//z/AAAhAAoAAADM//3/AAAbAA0AABDL//j/AAAfAAcAAADL//n/AAAeAAcAAADL//r/AAAeAAcAAADL//v/AAAeAAcAAADL//z/AAAdAAoAAADL//3/AAAgAAsAAADL//7/AAAgAAsAAADL////AAAgAAsAAADK//j/AAAeAAcAAADK//n/AAAeAAYAAADK//r/AAAeAAcAAADK//v/AAAeAAcAAADK//z/AAAfAAoAAADK//3/AAAfAAsAAADK//7/AAAfAAsAAADK////AAAfAAsAAADJ//3/AAAeAAsAAADI//3/AAAdAAsAAADH//3/AAAcAAsAAADG//3/AAAcAAsAAADF//3/AAAhAAsAAADE//3/AAAhAAsAAADD//3/AAAhAAsAAADC//3/AAAhAAsAAADB//3/AAAhAAsAAADA//3/AAAhAAsAAAC///3/AAAhAAsAAAC+//3/AAAgAAsAAAC9//3/AAAfAAsAAAC8//3/AAAeAAsAAAC7//3/AAAdAAsAAAC6//3/AAAcAAsAAAC5//3/AAAhAAsAAAC4//3/AAAhAAsAAAC4//7/AAAhAAsAAAC5//7/AAAhAAsAAAC6//7/AAAhAAsAAAC7//7/AAAhAAsAAAC8//7/AAAhAAsAAAC9//7/AAAhAAsAAAC+//7/AAAcAAsAAAC///7/AAAdAAsAAADA//7/AAAeAAsAAADB//7/AAAfAAsAAADC//7/AAAgAAsAAADD//7/AAAhAAsAAADE//7/AAAhAAsAAADF//7/AAAhAAsAAADG//7/AAAcAAsAAADH//7/AAAcAAsAAADI//7/AAAdAAsAAADJ//7/AAAeAAsAAADJ////AAAeAAsAAADI////AAAhAAsAAADH////AAAgAAsAAADG////AAAfAAsAAADF////AAAeAAsAAADE////AAAdAAsAAADD////AAAcAAsAAADC////AAAhAAsAAADB////AAAgAAsAAADA////AAAfAAsAAAC/////AAAeAAsAAAC+////AAAdAAsAAAC9////AAAcAAsAAAC8////AAAhAAsAAAC7////AAAhAAsAAAC6////AAAhAAsAAAC5////AAAhAAsAAAC4////AAAhAAsAAADB//z/AAAdAAoAAADC//z/AAAeAAoAAADD//z/AAAfAAoAAADE//z/AAAeAAoAAADF//z/AAAfAAoAAADG//z/AAAdAAoAAADH//z/AAAeAAoAAADI//z/AAAfAAoAAADJ//z/AAAeAAoAAAC5//f/AAAeAAYAAAC5//j/AAAeAAcAAAC5//n/AAAeAAYAAAC3//n/AAAeAAcAAAC1/wAAAAAiABAAAAC2/wAAAAAjABAAAAC3/wAAAAAjABAAAAC4/wAAAAAbABAAAAC5/wAAAAAcABAAAAC6/wAAAAAbABAAAAC7/wAAAAAcABAAAAC8/wAAAAAdABAAAAC9/wAAAAAbABAAAAC+/wAAAAAcABAAAAC//wAAAAAdABAAAADA/wAAAAAbABAAAADB/wAAAAAcABAAAADC/wAAAAAdABAAAADD/wAAAAAbABAAAADE/wAAAAAcABAAAADF/wAAAAAdABAAAADG/wAAAAAbABAAAADH/wAAAAAcABAAAADI/wAAAAAdABAAAADJ/wAAAAAbABAAAADK/wAAAAAcABAAAADL/wAAAAAdABAAAADM/wAAAAAjABAAAADN/wAAAAAjABAAAADO/wAAAAAaABAAAADQ//7/AAAOABgAAADQ////AAAOABkAAADR//7/AAAPABgAAADR////AAAPABkAAADS////AAAMAB0AAADT//7/AAANABwAAADT////AAANAB0AAADU//7/AAAOABwAAADU////AAAOAB0AAADV////AAAPAB0AAAC4//z/AAAeAAoAAAC5//z/AAAfAAoAAAC6//z/AAAdAAoAAAC7//z/AAAeAAoAAAC8//z/AAAfAAoAAAC9//z/AAAdAAoAAAC+//z/AAAeAAoAAAC///z/AAAfAAoAAADA//z/AAAfAAoAAADM//f/AAAhAAYAAADM//j/AAAhAAcAAAC3//3/AAAbAA0AAAC3//7/AAAbAA4AAAC3////AAAbAA8AAAC2//3/AAAaAA0AAAC2//7/AAAaAA4AAAC2////AAAaAA8AAAA=")

[node name="prosperity_toggle_details" parent="." instance=ExtResource("8_lxk5y")]
z_index = 2
y_sort_enabled = true
rotation = 0.000372129
tile_map_data = PackedByteArray("AADA//7/AAAQABoAAADB//7/AAARABoAAADC//7/AAASABoAAADC////AAASABsAAADB////AAARABsAAADA////AAAQABsAAAC4/wAAAAAbABAAAAC5/wAAAAAcABAAAAC6/wAAAAAdABAAAADL/wAAAAAbABAAABDK/wAAAAAdABAAAADJ/wAAAAAcABAAAAC7/wAAAAAcABAAAAC8/wAAAAAdABAAAAC9/wAAAAAcABAAAAC+/wAAAAAdABAAAAC//wAAAAAcABAAAADA/wAAAAAdABAAAADB/wAAAAAcABAAAADC/wAAAAAdABAAAADD/wAAAAAcABAAAADE/wAAAAAdABAAAADF/wAAAAAcABAAAADG/wAAAAAdABAAAADH/wAAAAAcABAAAADI/wAAAAAdABAAAAA=")

[node name="people_toggle" parent="." instance=ExtResource("8_lxk5y")]

[node name="Non-map-collisions" type="Node" parent="."]

[node name="StaticBody2D" parent="Non-map-collisions" instance=ExtResource("9_t1584")]
position = Vector2(-1481, -53)
rotation = 0.181481

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Non-map-collisions/StaticBody2D"]
position = Vector2(-1396.88, -6)
shape = SubResource("SegmentShape2D_xpmxf")
one_way_collision = true

[node name="StaticBody2D2" parent="Non-map-collisions/StaticBody2D" instance=ExtResource("9_t1584")]
position = Vector2(49.9814, -10.1884)
rotation = -0.491644

[node name="next_level_transition" parent="." instance=ExtResource("4_yx7o2")]
position = Vector2(250, -20)
level_name = "world_1_2"

[node name="House" type="Sprite2D" parent="next_level_transition"]
position = Vector2(14, -30)
texture = ExtResource("5_qms8i")

[node name="Player" parent="." instance=ExtResource("6_rckpy")]
position = Vector2(-1984, -39)

[node name="Camera2D2" type="Camera2D" parent="Player"]
position = Vector2(0, 7)
zoom = Vector2(4.695, 4.695)

[node name="water_toggle" parent="." instance=ExtResource("8_lxk5y")]
z_index = 3
tile_map_data = PackedByteArray("AACo//j/AAAmAB4AAACo//n/AAAmAB8AAACp//f/AAAnAB0AAACp//j/AAAnAB4AAACp//n/AAAnAB8AAACp//r/AAAnACAAAACq//f/AAAoAB0AAACq//j/AAAoAB4AAACq//n/AAAoAB8AAACq//r/AAAoACAAAACr//X/AAApABsAAACr//b/AAApABwAAACr//f/AAApAB0AAACr//j/AAApAB4AAACr//n/AAApAB8AAACr//r/AAApACAAAACr//v/AAApACEAAACs//T/AAAqABoAAACs//X/AAAqABsAAACs//b/AAAqABwAAACs//f/AAAqAB0AAACs//j/AAAqAB4AAACs//n/AAAqAB8AAACs//r/AAAqACAAAACs//v/AAAqACEAAACt//T/AAArABoAAACt//X/AAArABsAAACt//b/AAArABwAAACt//f/AAArAB0AAACt//j/AAArAB4AAACt//n/AAArAB8AAACt//r/AAArACAAAACt//v/AAArACEAAACu//P/AAAsABkAAACu//T/AAAsABoAAACu//X/AAAsABsAAACu//b/AAAsABwAAACu//f/AAAsAB0AAACu//j/AAAsAB4AAACu//n/AAAsAB8AAACu//r/AAAsACAAAACu//v/AAAsACEAAACu//z/AAAsACIAAACu//3/AAAsACMAAACu//7/AAAsACQAAACu////AAAsACUAAACv//P/AAAtABkAAACv//T/AAAtABoAAACv//X/AAAtABsAAACv//b/AAAtABwAAACv//f/AAAtAB0AAACv//j/AAAtAB4AAACv//n/AAAtAB8AAACv//r/AAAtACAAAACv//v/AAAtACEAAACv//z/AAAtACIAAACv//3/AAAtACMAAACv//7/AAAtACQAAACv////AAAtACUAAACw//P/AAAuABkAAACw//T/AAAuABoAAACw//X/AAAuABsAAACw//b/AAAuABwAAACw//f/AAAuAB0AAACw//j/AAAuAB4AAACw//n/AAAuAB8AAACw//r/AAAuACAAAACw//v/AAAuACEAAACw//z/AAAuACIAAACw//3/AAAuACMAAACw//7/AAAuACQAAACw////AAAuACUAAACx//P/AAAvABkAAACx//T/AAAvABoAAACx//X/AAAvABsAAACx//b/AAAvABwAAACx//f/AAAvAB0AAACx//j/AAAvAB4AAACx//n/AAAvAB8AAACx//r/AAAvACAAAACx//v/AAAvACEAAACx////AAAvACUAAACy//P/AAAwABkAAACy//T/AAAwABoAAACy//X/AAAwABsAAACy//b/AAAwABwAAACy//f/AAAwAB0AAACy//j/AAAwAB4AAACy//n/AAAwAB8AAACy//r/AAAwACAAAACy//v/AAAwACEAAACz//T/AAAxABoAAACz//X/AAAxABsAAACz//b/AAAxABwAAACz//f/AAAxAB0AAACz//j/AAAxAB4AAACz//n/AAAxAB8AAACz//r/AAAxACAAAACz//v/AAAxACEAAACz//z/AAAxACIAAAC0//T/AAAyABoAAAC0//X/AAAyABsAAAC0//b/AAAyABwAAAC0//f/AAAyAB0AAAC0//j/AAAyAB4AAAC0//n/AAAyAB8AAAC0//r/AAAyACAAAAC0//v/AAAyACEAAAC0//z/AAAyACIAAAC1//f/AAAzAB0AAAC1//j/AAAzAB4AAAC1//n/AAAzAB8AAAC1//r/AAAzACAAAAC1//v/AAAzACEAAAC2//j/AAA0AB4AAAC2//n/AAA0AB8AAAC2//r/AAA0ACAAAAC2//v/AAA0ACEAAAC3//j/AAA1AB4AAAC3//n/AAA1AB8AAAC3//r/AAA1ACAAAAC3//v/AAA1ACEAAAA=")

[node name="MainStage" parent="." instance=ExtResource("8_lxk5y")]
y_sort_enabled = true
tile_map_data = PackedByteArray("AAC2/wAAAAAEAAAAAAC3/wAAAAACAAAAAAC4/wAAAAADAAAAAAC5/wAAAAAEAAAAAAC6/wAAAAABAAAAAAC7/wAAAAACAAAAAAC8/wAAAAADAAAAAAC9/wAAAAAEAAAAAAC+/wAAAAABAAAAAAC//wAAAAACAAAAAADA/wAAAAADAAAAAADB/wAAAAAEAAAAAADC/wAAAAABAAAAAADD/wAAAAACAAAAAADE/wAAAAADAAAAAADF/wAAAAAEAAAAAADG/wAAAAABAAAAAADH/wAAAAACAAAAAADI/wAAAAADAAAAAADJ/wAAAAAEAAAAAAC2/wEAAAAEAAEAAAC2/wIAAAAEAAIAAAC2/wMAAAAEAAMAAAC2/wQAAAAEAAQAAAC3/wEAAAACAAEAAAC3/wIAAAACAAIAAAC3/wMAAAACAAMAAAC3/wQAAAACAAQAAAC4/wEAAAADAAEAAAC4/wIAAAADAAIAAAC4/wMAAAADAAMAAAC4/wQAAAADAAQAAAC5/wEAAAAEAAEAAAC5/wIAAAAEAAIAAAC5/wMAAAAEAAMAAAC5/wQAAAAEAAQAAAC6/wEAAAABAAEAAAC6/wIAAAABAAIAAAC6/wMAAAABAAMAAAC6/wQAAAABAAQAAAC7/wEAAAACAAEAAAC7/wIAAAACAAIAAAC7/wMAAAACAAMAAAC7/wQAAAACAAQAAAC8/wEAAAADAAEAAAC8/wIAAAADAAIAAAC8/wMAAAADAAMAAAC8/wQAAAADAAQAAAC9/wEAAAAEAAEAAAC9/wIAAAAEAAIAAAC9/wMAAAAEAAMAAAC9/wQAAAAEAAQAAAC+/wEAAAABAAEAAAC+/wIAAAABAAIAAAC+/wMAAAABAAMAAAC+/wQAAAABAAQAAAC//wEAAAACAAEAAAC//wIAAAACAAIAAAC//wMAAAACAAMAAAC//wQAAAACAAQAAADA/wEAAAADAAEAAADA/wIAAAADAAIAAADA/wMAAAADAAMAAADA/wQAAAADAAQAAADB/wEAAAAEAAEAAADB/wIAAAAEAAIAAADB/wMAAAAEAAMAAADB/wQAAAAEAAQAAADC/wEAAAABAAEAAADC/wIAAAABAAIAAADC/wMAAAABAAMAAADC/wQAAAABAAQAAADD/wEAAAACAAEAAADD/wIAAAACAAIAAADD/wMAAAACAAMAAADD/wQAAAACAAQAAADE/wEAAAADAAEAAADE/wIAAAADAAIAAADE/wMAAAADAAMAAADE/wQAAAADAAQAAADF/wEAAAAEAAEAAADF/wIAAAAEAAIAAADF/wMAAAAEAAMAAADF/wQAAAAEAAQAAADG/wEAAAABAAEAAADG/wIAAAABAAIAAADG/wMAAAABAAMAAADG/wQAAAABAAQAAADH/wEAAAACAAEAAADH/wIAAAACAAIAAADH/wMAAAACAAMAAADH/wQAAAACAAQAAADI/wEAAAADAAEAAADI/wIAAAADAAIAAADI/wMAAAADAAMAAADI/wQAAAADAAQAAADJ/wEAAAAEAAEAAADJ/wIAAAAEAAIAAADJ/wMAAAAEAAMAAADJ/wQAAAAEAAQAAADK/wAAAAABAAAAAADK/wEAAAABAAEAAADK/wIAAAABAAIAAADK/wMAAAABAAMAAADK/wQAAAABAAQAAADL/wAAAAACAAAAAADL/wEAAAACAAEAAADL/wIAAAACAAIAAADL/wMAAAACAAMAAADL/wQAAAACAAQAAADM/wAAAAADAAAAAADM/wEAAAADAAEAAADM/wIAAAADAAIAAADM/wMAAAADAAMAAADM/wQAAAADAAQAAADN/wAAAAAEAAAAAADN/wEAAAAEAAEAAADN/wIAAAAEAAIAAADN/wMAAAAEAAMAAADN/wQAAAAEAAQAAADO/wAAAAABAAAAAADO/wEAAAABAAEAAADO/wIAAAABAAIAAADO/wMAAAABAAMAAADO/wQAAAABAAQAAADP/wAAAAACAAAAAADP/wEAAAACAAEAAADP/wIAAAACAAIAAADP/wMAAAACAAMAAADP/wQAAAACAAQAAADQ/wAAAAADAAAAAADQ/wEAAAADAAEAAADQ/wIAAAADAAIAAADQ/wMAAAADAAMAAADQ/wQAAAADAAQAAADR/wAAAAAEAAAAAADR/wEAAAAEAAEAAADR/wIAAAAEAAIAAADR/wMAAAAEAAMAAADR/wQAAAAEAAQAAADS/wAAAAABAAAAAADS/wEAAAABAAEAAADS/wIAAAABAAIAAADS/wMAAAABAAMAAADS/wQAAAABAAQAAADT/wAAAAACAAAAAADT/wEAAAACAAEAAADT/wIAAAACAAIAAADT/wMAAAACAAMAAADT/wQAAAACAAQAAADU/wAAAAADAAAAAADU/wEAAAADAAEAAADU/wIAAAADAAIAAADU/wMAAAADAAMAAADU/wQAAAADAAQAAADV/wAAAAAEAAAAAADV/wEAAAAEAAEAAADV/wIAAAAEAAIAAADV/wMAAAAEAAMAAADV/wQAAAAEAAQAAADW/wAAAAABAAAAAADW/wEAAAABAAEAAADW/wIAAAABAAIAAADW/wMAAAABAAMAAADW/wQAAAABAAQAAADX/wAAAAACAAAAAADX/wEAAAACAAEAAADX/wIAAAACAAIAAADX/wMAAAACAAMAAADX/wQAAAACAAQAAADY/wAAAAADAAAAAADY/wEAAAADAAEAAADY/wIAAAADAAIAAADY/wMAAAADAAMAAADY/wQAAAADAAQAAADZ/wAAAAAEAAAAAADZ/wEAAAAEAAEAAADZ/wIAAAAEAAIAAADZ/wMAAAAEAAMAAADZ/wQAAAAEAAQAAADa/wAAAAABAAAAAADa/wEAAAABAAEAAADa/wIAAAABAAIAAADa/wMAAAABAAMAAADa/wQAAAABAAQAAADb/wAAAAACAAAAAADb/wEAAAACAAEAAADb/wIAAAACAAIAAADb/wMAAAACAAMAAADb/wQAAAACAAQAAADc/wAAAAADAAAAAADc/wEAAAADAAEAAADc/wIAAAADAAIAAADc/wMAAAADAAMAAADc/wQAAAADAAQAAADd/wAAAAAEAAAAAADd/wEAAAAEAAEAAADd/wIAAAAEAAIAAADd/wMAAAAEAAMAAADd/wQAAAAEAAQAAADe/wAAAAABAAAAAADe/wEAAAABAAEAAADe/wIAAAABAAIAAADe/wMAAAABAAMAAADe/wQAAAABAAQAAADf/wAAAAACAAAAAADf/wEAAAACAAEAAADf/wIAAAACAAIAAADf/wMAAAACAAMAAADf/wQAAAACAAQAAADg/wAAAAADAAAAAADg/wEAAAADAAEAAADg/wIAAAADAAIAAADg/wMAAAADAAMAAADg/wQAAAADAAQAAADh/wAAAAAEAAAAAADh/wEAAAAEAAEAAADh/wIAAAAEAAIAAADh/wMAAAAEAAMAAADh/wQAAAAEAAQAAADi/wAAAAABAAAAAADi/wEAAAABAAEAAADi/wIAAAABAAIAAADi/wMAAAABAAMAAADi/wQAAAABAAQAAADj/wAAAAACAAAAAADj/wEAAAACAAEAAADj/wIAAAACAAIAAADj/wMAAAACAAMAAADj/wQAAAACAAQAAADk/wAAAAADAAAAAADk/wEAAAADAAEAAADk/wIAAAADAAIAAADk/wMAAAADAAMAAADk/wQAAAADAAQAAADl/wAAAAAEAAAAAADl/wEAAAAEAAEAAADl/wIAAAAEAAIAAADl/wMAAAAEAAMAAADl/wQAAAAEAAQAAACz/wAAAAABAAAAAACz/wEAAAABAAEAAACz/wIAAAABAAIAAACz/wMAAAABAAMAAACz/wQAAAABAAQAAAC0/wAAAAACAAAAAAC0/wEAAAACAAEAAAC0/wIAAAACAAIAAAC0/wMAAAACAAMAAAC0/wQAAAACAAQAAAC1/wAAAAADAAAAAAC1/wEAAAADAAEAAAC1/wIAAAADAAIAAAC1/wMAAAADAAMAAAC1/wQAAAADAAQAAACv/wAAAAABAAAAAACv/wEAAAABAAEAAACv/wIAAAABAAIAAACv/wMAAAABAAMAAACv/wQAAAABAAQAAACw/wAAAAACAAAAAACw/wEAAAACAAEAAACw/wIAAAACAAIAAACw/wMAAAACAAMAAACw/wQAAAACAAQAAACx/wAAAAADAAAAAACx/wEAAAADAAEAAACx/wIAAAADAAIAAACx/wMAAAADAAMAAACx/wQAAAADAAQAAACy/wAAAAAEAAAAAACy/wEAAAAEAAEAAACy/wIAAAAEAAIAAACy/wMAAAAEAAMAAACy/wQAAAAEAAQAAACr/wAAAAABAAAAAACr/wEAAAABAAEAAACr/wIAAAABAAIAAACr/wMAAAABAAMAAACr/wQAAAABAAQAAACs/wAAAAACAAAAAACs/wEAAAACAAEAAACs/wIAAAACAAIAAACs/wMAAAACAAMAAACs/wQAAAACAAQAAACt/wAAAAADAAAAAACt/wEAAAADAAEAAACt/wIAAAADAAIAAACt/wMAAAADAAMAAACt/wQAAAADAAQAAACu/wAAAAAEAAAAAACu/wEAAAAEAAEAAACu/wIAAAAEAAIAAACu/wMAAAAEAAMAAACu/wQAAAAEAAQAAACn/wAAAAABAAAAAACn/wEAAAABAAEAAACn/wIAAAABAAIAAACn/wMAAAABAAMAAACn/wQAAAABAAQAAACo/wAAAAACAAAAAACo/wEAAAACAAEAAACo/wIAAAACAAIAAACo/wMAAAACAAMAAACo/wQAAAACAAQAAACp/wAAAAADAAAAAACp/wEAAAADAAEAAACp/wIAAAADAAIAAACp/wMAAAADAAMAAACp/wQAAAADAAQAAACq/wAAAAAEAAAAAACq/wEAAAAEAAEAAACq/wIAAAAEAAIAAACq/wMAAAAEAAMAAACq/wQAAAAEAAQAAACj/wAAAAABAAAAAACj/wEAAAABAAEAAACj/wIAAAABAAIAAACj/wMAAAABAAMAAACj/wQAAAABAAQAAACk/wAAAAACAAAAAACk/wEAAAACAAEAAACk/wIAAAACAAIAAACk/wMAAAACAAMAAACk/wQAAAACAAQAAACl/wAAAAADAAAAAACl/wEAAAADAAEAAACl/wIAAAADAAIAAACl/wMAAAADAAMAAACl/wQAAAADAAQAAACm/wAAAAAEAAAAAACm/wEAAAAEAAEAAACm/wIAAAAEAAIAAACm/wMAAAAEAAMAAACm/wQAAAAEAAQAAACf/wAAAAABAAAAAACf/wEAAAABAAEAAACf/wIAAAABAAIAAACf/wMAAAABAAMAAACf/wQAAAABAAQAAACg/wAAAAACAAAAAACg/wEAAAACAAEAAACg/wIAAAACAAIAAACg/wMAAAACAAMAAACg/wQAAAACAAQAAACh/wAAAAADAAAAAACh/wEAAAADAAEAAACh/wIAAAADAAIAAACh/wMAAAADAAMAAACh/wQAAAADAAQAAACi/wAAAAAEAAAAAACi/wEAAAAEAAEAAACi/wIAAAAEAAIAAACi/wMAAAAEAAMAAACi/wQAAAAEAAQAAACb/wAAAAABAAAAAACb/wEAAAABAAEAAACb/wIAAAABAAIAAACb/wMAAAABAAMAAACb/wQAAAABAAQAAACc/wAAAAACAAAAAACc/wEAAAACAAEAAACc/wIAAAACAAIAAACc/wMAAAACAAMAAACc/wQAAAACAAQAAACd/wAAAAADAAAAAACd/wEAAAADAAEAAACd/wIAAAADAAIAAACd/wMAAAADAAMAAACd/wQAAAADAAQAAACe/wAAAAAEAAAAAACe/wEAAAAEAAEAAACe/wIAAAAEAAIAAACe/wMAAAAEAAMAAACe/wQAAAAEAAQAAACX/wAAAAABAAAAAACX/wEAAAABAAEAAACX/wIAAAABAAIAAACX/wMAAAABAAMAAACX/wQAAAABAAQAAACY/wAAAAACAAAAAACY/wEAAAACAAEAAACY/wIAAAACAAIAAACY/wMAAAACAAMAAACY/wQAAAACAAQAAACZ/wAAAAADAAAAAACZ/wEAAAADAAEAAACZ/wIAAAADAAIAAACZ/wMAAAADAAMAAACZ/wQAAAADAAQAAACa/wAAAAAEAAAAAACa/wEAAAAEAAEAAACa/wIAAAAEAAIAAACa/wMAAAAEAAMAAACa/wQAAAAEAAQAAACT/wAAAAABAAAAAACT/wEAAAABAAEAAACT/wIAAAABAAIAAACT/wMAAAABAAMAAACT/wQAAAABAAQAAACU/wAAAAACAAAAAACU/wEAAAACAAEAAACU/wIAAAACAAIAAACU/wMAAAACAAMAAACU/wQAAAACAAQAAACV/wAAAAADAAAAAACV/wEAAAADAAEAAACV/wIAAAADAAIAAACV/wMAAAADAAMAAACV/wQAAAADAAQAAACW/wAAAAAEAAAAAACW/wEAAAAEAAEAAACW/wIAAAAEAAIAAACW/wMAAAAEAAMAAACW/wQAAAAEAAQAAACP/wAAAAABAAAAAACP/wEAAAABAAEAAACP/wIAAAABAAIAAACP/wMAAAABAAMAAACP/wQAAAABAAQAAACQ/wAAAAACAAAAAACQ/wEAAAACAAEAAACQ/wIAAAACAAIAAACQ/wMAAAACAAMAAACQ/wQAAAACAAQAAACR/wAAAAADAAAAAACR/wEAAAADAAEAAACR/wIAAAADAAIAAACR/wMAAAADAAMAAACR/wQAAAADAAQAAACS/wAAAAAEAAAAAACS/wEAAAAEAAEAAACS/wIAAAAEAAIAAACS/wMAAAAEAAMAAACS/wQAAAAEAAQAAACL/wAAAAABAAAAAACL/wEAAAABAAEAAACL/wIAAAABAAIAAACL/wMAAAABAAMAAACL/wQAAAABAAQAAACM/wAAAAACAAAAAACM/wEAAAACAAEAAACM/wIAAAACAAIAAACM/wMAAAACAAMAAACM/wQAAAACAAQAAACN/wAAAAADAAAAAACN/wEAAAADAAEAAACN/wIAAAADAAIAAACN/wMAAAADAAMAAACN/wQAAAADAAQAAACO/wAAAAAEAAAAAACO/wEAAAAEAAEAAACO/wIAAAAEAAIAAACO/wMAAAAEAAMAAACO/wQAAAAEAAQAAACH/wAAAAABAAAAAACH/wEAAAABAAEAAACH/wIAAAABAAIAAACH/wMAAAABAAMAAACH/wQAAAABAAQAAACI/wAAAAACAAAAAACI/wEAAAACAAEAAACI/wIAAAACAAIAAACI/wMAAAACAAMAAACI/wQAAAACAAQAAACJ/wAAAAADAAAAAACJ/wEAAAADAAEAAACJ/wIAAAADAAIAAACJ/wMAAAADAAMAAACJ/wQAAAADAAQAAACK/wAAAAAEAAAAAACK/wEAAAAEAAEAAACK/wIAAAAEAAIAAACK/wMAAAAEAAMAAACK/wQAAAAEAAQAAACD/wAAAAABAAAAAACD/wEAAAABAAEAAACD/wIAAAABAAIAAACD/wMAAAABAAMAAACD/wQAAAABAAQAAACE/wAAAAACAAAAAACE/wEAAAACAAEAAACE/wIAAAACAAIAAACE/wMAAAACAAMAAACE/wQAAAACAAQAAACF/wAAAAADAAAAAACF/wEAAAADAAEAAACF/wIAAAADAAIAAACF/wMAAAADAAMAAACF/wQAAAADAAQAAACG/wAAAAAEAAAAAACG/wEAAAAEAAEAAACG/wIAAAAEAAIAAACG/wMAAAAEAAMAAACG/wQAAAAEAAQAAAB//wAAAAABAAAAAAB//wEAAAABAAEAAAB//wIAAAABAAIAAAB//wMAAAABAAMAAAB//wQAAAABAAQAAACA/wAAAAACAAAAAACA/wEAAAACAAEAAACA/wIAAAACAAIAAACA/wMAAAACAAMAAACA/wQAAAACAAQAAACB/wAAAAADAAAAAACB/wEAAAADAAEAAACB/wIAAAADAAIAAACB/wMAAAADAAMAAACB/wQAAAADAAQAAACC/wAAAAAEAAAAAACC/wEAAAAEAAEAAACC/wIAAAAEAAIAAACC/wMAAAAEAAMAAACC/wQAAAAEAAQAAAB7/wAAAAABAAAAAAB7/wEAAAABAAEAAAB7/wIAAAABAAIAAAB7/wMAAAABAAMAAAB7/wQAAAABAAQAAAB8/wAAAAACAAAAAAB8/wEAAAACAAEAAAB8/wIAAAACAAIAAAB8/wMAAAACAAMAAAB8/wQAAAACAAQAAAB9/wAAAAADAAAAAAB9/wEAAAADAAEAAAB9/wIAAAADAAIAAAB9/wMAAAADAAMAAAB9/wQAAAADAAQAAAB+/wAAAAAEAAAAAAB+/wEAAAAEAAEAAAB+/wIAAAAEAAIAAAB+/wMAAAAEAAMAAAB+/wQAAAAEAAQAAAB7/wUAAAABAAUAAAB8/wUAAAACAAUAAAB9/wUAAAADAAUAAAB+/wUAAAAEAAUAAAB//wUAAAABAAUAAACA/wUAAAACAAUAAACB/wUAAAADAAUAAACC/wUAAAAEAAUAAACD/wUAAAABAAUAAACE/wUAAAACAAUAAACF/wUAAAADAAUAAACG/wUAAAAEAAUAAACH/wUAAAABAAUAAACI/wUAAAACAAUAAACJ/wUAAAADAAUAAACK/wUAAAAEAAUAAACL/wUAAAABAAUAAACM/wUAAAACAAUAAACN/wUAAAADAAUAAACO/wUAAAAEAAUAAACP/wUAAAABAAUAAACQ/wUAAAACAAUAAACR/wUAAAADAAUAAACS/wUAAAAEAAUAAACT/wUAAAABAAUAAACU/wUAAAACAAUAAACV/wUAAAADAAUAAACW/wUAAAAEAAUAAACX/wUAAAABAAUAAACY/wUAAAACAAUAAACZ/wUAAAADAAUAAACa/wUAAAAEAAUAAACb/wUAAAABAAUAAACc/wUAAAACAAUAAACd/wUAAAADAAUAAACe/wUAAAAEAAUAAACf/wUAAAABAAUAAACg/wUAAAACAAUAAACh/wUAAAADAAUAAACi/wUAAAAEAAUAAACj/wUAAAABAAUAAACk/wUAAAACAAUAAACl/wUAAAADAAUAAACm/wUAAAAEAAUAAACn/wUAAAABAAUAAACo/wUAAAACAAUAAACp/wUAAAADAAUAAACq/wUAAAAEAAUAAACr/wUAAAABAAUAAACs/wUAAAACAAUAAACt/wUAAAADAAUAAACu/wUAAAAEAAUAAACv/wUAAAABAAUAAACw/wUAAAACAAUAAACx/wUAAAADAAUAAACy/wUAAAAEAAUAAACz/wUAAAABAAUAAAC0/wUAAAACAAUAAAC1/wUAAAADAAUAAAC2/wUAAAAEAAUAAAC3/wUAAAABAAUAAAC4/wUAAAACAAUAAAC5/wUAAAADAAUAAAC6/wUAAAAEAAUAAAC7/wUAAAABAAUAAAC8/wUAAAACAAUAAAC9/wUAAAADAAUAAAC+/wUAAAAEAAUAAAC//wUAAAABAAUAAADA/wUAAAACAAUAAADB/wUAAAADAAUAAADC/wUAAAAEAAUAAADD/wUAAAABAAUAAADE/wUAAAACAAUAAADF/wUAAAADAAUAAADG/wUAAAAEAAUAAADH/wUAAAABAAUAAADI/wUAAAACAAUAAADJ/wUAAAADAAUAAADK/wUAAAAEAAUAAADL/wUAAAABAAUAAADM/wUAAAACAAUAAADN/wUAAAADAAUAAADO/wUAAAAEAAUAAADP/wUAAAABAAUAAADQ/wUAAAACAAUAAADR/wUAAAADAAUAAADS/wUAAAAEAAUAAADT/wUAAAABAAUAAADU/wUAAAACAAUAAADV/wUAAAADAAUAAADW/wUAAAAEAAUAAADX/wUAAAABAAUAAADY/wUAAAACAAUAAADZ/wUAAAADAAUAAADa/wUAAAAEAAUAAADb/wUAAAABAAUAAADc/wUAAAACAAUAAADd/wUAAAADAAUAAADe/wUAAAAEAAUAAADf/wUAAAABAAUAAADg/wUAAAACAAUAAADh/wUAAAADAAUAAADi/wUAAAAEAAUAAADj/wUAAAABAAUAAADk/wUAAAACAAUAAADl/wUAAAADAAUAAACh//z/AAAbABoAAACh//3/AAAbABsAAACh//7/AAAbABwAAACh////AAAbAB0AAACi//z/AAAcABoAAACi//3/AAAcABsAAACj//z/AAAdABoAAACj//3/AAAdABsAAACk//z/AAAeABoAAACk//3/AAAeABsAAACl//z/AAAfABoAAACl//3/AAAfABsAAACm//z/AAAgABoAAACm//3/AAAgABsAAACn//z/AAAhABoAAACn//3/AAAhABsAAACo//z/AAAiABoAAACo//3/AAAiABsAAACo//7/AAAiABwAAACo////AAAiAB0AAAA=")

[node name="foreground1" parent="MainStage" instance=ExtResource("8_lxk5y")]
tile_map_data = PackedByteArray("AAB9//3/AAAeABUAAAB9//7/AAAeABYAAAB+//z/AAAfABQAAAB+//3/AAAfABUAAAB+//7/AAAfABYAAAB+////AAAfABcAAAB///z/AAAgABQAAAB///3/AAAgABUAAAB///7/AAAgABYAAAB/////AAAgABcAAACA//3/AAAhABUAAACA//7/AAAhABYAAAA=")

[node name="foreground2" parent="MainStage/foreground1" instance=ExtResource("8_lxk5y")]

[node name="mugger spawn" parent="." instance=ExtResource("7_8fpje")]
position = Vector2(-1081, -5)
